[gd_scene load_steps=10 format=2]

[ext_resource path="res://characters/Player.gd" type="Script" id=1]
[ext_resource path="res://characters/PlayerStates.gd" type="Script" id=2]
[ext_resource path="res://assets/temp/player.png" type="Texture" id=3]
[ext_resource path="res://assets/temp/player_walk.png" type="Texture" id=4]
[ext_resource path="res://assets/temp/player_drill.png" type="Texture" id=5]
[ext_resource path="res://assets/temp/gold.png" type="Texture" id=6]
[ext_resource path="res://utils/DialogPlayer.tscn" type="PackedScene" id=7]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "mine",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="PlayerStates" type="Node" parent="."]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="C" type="CanvasLayer" parent="."]

[node name="C" type="Control" parent="C"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="M" type="MarginContainer" parent="C/C"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_top = 10
custom_constants/margin_left = 20

[node name="H" type="HBoxContainer" parent="C/C/M"]
margin_left = 20.0
margin_top = 10.0
margin_right = 448.0
margin_bottom = 26.0
size_flags_vertical = 0
custom_constants/separation = 8

[node name="TextureRect" type="TextureRect" parent="C/C/M/H"]
margin_right = 14.0
margin_bottom = 14.0
rect_min_size = Vector2( 14, 14 )
size_flags_vertical = 0
texture = ExtResource( 6 )
expand = true
stretch_mode = 1

[node name="GoldCount" type="Label" parent="C/C/M/H"]
margin_left = 22.0
margin_right = 30.0
margin_bottom = 16.0
size_flags_vertical = 1
text = "0"

[node name="DialogPlayer" parent="C" instance=ExtResource( 7 )]
